Update title to Cybersecurity & Linux Full-Stack Developer

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/jpeg" href="/skull-logo.jpg" />
-    <title>Sirius - Full Stack Developer Portfolio</title>
-    <meta name="description" content="Full Stack Developer specializing in blockchain, mobile apps, and web development. Explore my projects and get in touch for collaborations." />
+    <title>Sirius - Cybersecurity & Linux Full-Stack Developer</title>
+    <meta name="description" content="Cybersecurity expert and Linux specialist with full-stack development skills. Specializing in secure web applications, blockchain, and mobile development." />
     <meta name="author" content="Sirius" />
 
-    <meta property="og:title" content="Sirius - Full Stack Developer Portfolio" />
-    <meta property="og:description" content="Full Stack Developer specializing in blockchain, mobile apps, and web development. Explore my projects and get in touch for collaborations." />
+    <meta property="og:title" content="Sirius - Cybersecurity & Linux Full-Stack Developer" />
+    <meta property="og:description" content="Cybersecurity expert and Linux specialist with full-stack development skills. Specializing in secure web applications, blockchain, and mobile development." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
